# ThankmasOverlay

./: .gitignore  Dockerfile  Dockerfile.scratch  README.md  test_data.json
overlay/: Donations.gd  Kweebec.png.import  LineEdit.gd  Main.gd  Main.tscn  PenumbraSerifStd-Bold.otf.import  ProgressBar.gd  ProgressText.gd  bar.png.import  bar2.png.import  bar3.png.import  export_presets.cfg  icon.svg.import  project.godot
rest/: Cargo.toml
rest/overlay/: index.html  overlay.html  overlay.pck
rest/overlay/bar/: index.html
rest/overlay/hugo-popup/: index.html
rest/overlay/memetheew-popup/: index.html
rest/overlay/popup/: index.html
rest/src/: handler.rs  main.rs  ws.rs
test_data/: campaign1.json  campaign2.json  webhook_msg.json
tiltify/: Cargo.toml
tiltify/src/: lib.rs
tiltify/testdata/: campaign2.json  donation.json
