[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiltify = { path = "../tiltify" }
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
reqwest = { version = "0.11.20", features = ["json"] }
