[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiltify = { path = "../tiltify" }
warp = { version = "0.4.2", features = ["websocket", "server"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
futures = { version = "0.3.31", default-features = false }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.24", features = ["json"] }